test/libsolidity/syntaxTests/specialFunctions/abidecode/abi_decode_invalid_argument_ternary_expression_max_keyword.sol
contract C {
    function f(bool c) pure public {
        abi.decode("", ((c ? type(uint) : type(int)).max));
    }
}
// ----
// TypeError 1039: (74-106): Argument has to be a type name.
